--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
             "homepage": "http://theshopexpert.com"
         }
     ],
-    "require": {
-        "php": ">=5.3.0"
-    },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": {"MongoSearch": "src/"}
     }
