--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
     ],
     "minimum-stability": "dev",
     "autoload": {
-        "psr-0": {"MongoSearch": "src/"}
+        "psr-0": {"MongoSearch": ""}
     }
 }
