--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     ],
     "minimum-stability": "dev",
     "autoload": {
-        "psr-0": {"MongoSearch": ""}
+        "psr-0": {"MongoSearchBundle": ""}
     }
+    "target-dir": "MongoSearchBundle",
+
 }
