--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
     "autoload": {
         "psr-0": {"MongoSearchBundle": ""}
     }
-    "target-dir": "MongoSearchBundle",
+    "target-dir": "MongoSearchBundle"
 
 }
